--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   
   <header class="header outline">
-    <a href="index.html">MONSAR</a>
+			<div class="logo">
+			<img src="assets/LOGO.png" alt=""></a>
+		<a href="index.html">MONSAR
+	</a></div>
     <nav class="nav">
 			<a href="servicios.html">Servicios</a>
 			<a href="metodologia.html">Metodología</a>
