--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Administración Inmobiliaria Monsar</title> 
   <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2322424/minireset.css">
-  <link href="style.css" rel="stylesheet">
+  <link href="stylee.css" rel="stylesheet">
 </head>
 
 <body>
