--- a/contacto.html
+++ b/contacto.html
@@ -18,13 +18,15 @@
 	</a></div>
     <nav class="nav">
 			<a href="servicios.html">Servicios</a>
-			<a href="metodologia.html">Metodología</a>
+			<a href="principios.html">Principios</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
 
 <section class="contactanos">
-	<a>Contáctanos</a>
+    <div class="titulos">
+  <a>Contáctanos</a>
+</div>
 <div class="parrafoc">
 	<p> Nos encantaría trabajar contigo, llena la forma o mándanos un mail </p> <p> para obtener más detalles y una cotización personalizada.</p>
 </div>
@@ -53,6 +55,7 @@
       <a class="link" href="mailto:cotizaciones@monsar.com.mx">cotizaciones@monsar.com.mx</a>
 
       <p class="subtit">Dirección General</p>
+      <p class="link">Samantha Rodríguez</p> <br>
       <a class="link" href="mailto:srodriguez@monsar.com.mx">srodriguez@monsar.com.mx</a>
       <br><br>
       <a class="telefono" href="https://wa.me/525588051336" target="_blank" rel="noopener noreferrer">55-8805-1336</a>
