--- a/principios.html
+++ b/principios.html
@@ -23,19 +23,16 @@
     </nav>
   </header>
 
-  <section class="img">
-    <img src="assets/matthew-henry-nvFpb_MMRj8-unsplash.jpg" alt=""></a>
-  </section>
-
-<section class="quienes">
-	<a>¿Quiénes somos?</a>
+<section class="principios">
+	<a>Principios</a>
 <div class="parrafo">
-	<p>MONSAR es una empresa mexicana con amplia experiencia en el ramo de la Administración Inmobiliaria. </p>
+	<p>Presencia en el condominio — Contamos con personal profesional para cada área y trabajamos en equipo dando respuestas oportunas a los re- querimientos del Condominio y tomando medidas preventivas para evitar contratiempos.</p>
 
 
-	<p>Nuestro objetivo es brindar a nuestros clientes servicios profesionales de calidad <br> y honestos para satisfacer sus necesidades.</p>
+	<p>Transparencia administrativa — Controlamos de manera estricta, y eficiente el área financiera y operativa, con procedimientos oportunos para el correcto funcionamiento.</p>
 		
-  <p>Nuestro compromiso es proporcionar atención prioritaria, efectiva <br> y personalizada.</p>
+  <p>Comunicación permanente — Informando pe- riódicamente a los Condóminos de la situación del conjunto y su administración.</p>
+  <p>Trabajamos de acuerdo a nuestro lema — Compromiso, honestidad y eficiencia.</p>
 </div>
 </section>
 
