--- a/servicios.html
+++ b/servicios.html
@@ -18,13 +18,16 @@
 	</a></div>
     <nav class="nav">
 			<a href="servicios.html">Servicios</a>
-			<a href="metodologia.html">Metodología</a>
+			<a href="principios.html">Principios</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
 
 <section class="servicios">
-	<a>SERVICIOS</a>
+        <div class="titulos">
+    <a>SERVICIOS</a>
+</div>
+    <div class="tablas">
 <div class="tabla">
     <p class="columna1">1</p>
     <p class="columna2">Personal</p>
@@ -59,6 +62,7 @@
     <p class="columna1">7</p>
     <p class="columna2">Información financiera</p>
     <p class="columna3">+</p>
+</div>
 </div>
 </section>
 
