--- a/servicios.html
+++ b/servicios.html
@@ -27,44 +27,83 @@
         <div class="titulos">
     <a>SERVICIOS</a>
 </div>
-    <div class="tablas">
-<div class="tabla">
-    <p class="columna1">1</p>
-    <p class="columna2">Personal</p>
-    <p class="columna3">+</p>
+
+
+<div style="visibility: hidden; position: absolute; width: 0px; height: 0px;">
+  <svg xmlns="http://www.w3.org/2000/svg">
+    <symbol viewBox="0 0 24 24" id="expand-more">
+      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/><path d="M0 0h24v24H0z" fill="none"/>
+    </symbol>
+    <symbol viewBox="0 0 24 24" id="close">
+      <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/>
+    </symbol>
+  </svg>
 </div>
-<div class="tabla">
-    <p class="columna1">2</p>
-    <p class="columna2">Reglamentos internos</p>
-    <p class="columna3">+</p>
-</div>
-<div class="tabla">
-    <p class="columna1">3</p>
-    <p class="columna2">Proveedores, constructoras y servicios</p>
-    <p class="columna3">+</p>
-</div>
-<div class="tabla">
-    <p class="columna1">4</p>
-    <p class="columna2">Representación</p>
-    <p class="columna3">+</p>
-</div>
-<div class="tabla">
-    <p class="columna1">5</p>
-    <p class="columna2">Personal administrativo</p>
-    <p class="columna3">+</p>
-</div>
-<div class="tabla">
-    <p class="columna1">6</p>
-    <p class="columna2">Juntas de Comité de Vigilancia y Administración</p>
-    <p class="columna3">+</p>
-</div>
-<div class="tabla">
-    <p class="columna1">7</p>
-    <p class="columna2">Información financiera</p>
-    <p class="columna3">+</p>
-</div>
-</div>
-</section>
+
+<details >
+  <summary>
+Personal
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Reclutamiento, selección, contratación, manejo y capacitación de personal administrativo, de mantenimiento y limpieza</p>
+</details>
+
+<details>
+
+  <summary>
+Reglamentación
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Asesoría para que los reglamentos internos se rijan de acuerdo con los artículos de la ley condominal de la dependencia correspondiente</p>
+</details>
+
+<details>
+  <summary>
+Proveedores y servicios  
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Contratación, negociación, control y pago a terceros como: proveedores, constructoras y servicios</p>
+</details>
+
+<details>
+  <summary>
+Representación 
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Representar al Condominio ante las diferentes Asociaciones (en caso de que se requiera)</p>
+</details>
+
+<details>
+  <summary>
+Personal Administrativo 
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Presencia de personal administrativo en el Condominio y supervisión constante de especialistas en diversas áreas.</p>
+</details>
+
+<details>
+  <summary>
+Juntas de Comité de Vigilancia
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Programar y coordinar juntas de Comité de Vigilancia y Asambleas.</p>
+</details>
+
+<details>
+  <summary>
+   Servicios Financieros
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Informar mensualmente la situación financiera del condominio de manera clara y transparente.</p>
+</details>
+
 
 <footer class="footer">
  <p>&copy; 2020 Administración Inmobiliaria Monsar</p>
