--- a/gracias.html
+++ b/gracias.html
@@ -7,6 +7,7 @@
   <title>Administración Inmobiliaria Monsar</title> 
   <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2322424/minireset.css">
   <link href="stylee.css" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -23,18 +24,13 @@
     </nav>
   </header>
 
-<section class="principios">
-	<a>Principios</a>
-<div class="parrafo">
-	<p>Presencia en el condominio — Contamos con personal profesional para cada área y trabajamos en equipo dando respuestas oportunas a los requerimientos del Condominio y tomando medidas preventivas para evitar contratiempos.</p>
-
-
-	<p>Transparencia administrativa — Controlamos de manera estricta, y eficiente <br>el área financiera y operativa, con procedimientos oportunos para el correcto funcionamiento.</p>
-		
-  <p>Comunicación permanente — Informando periódicamente a los Condóminos <br>de la situación del condominio y su administración.</p>
-  <p>Trabajamos de acuerdo a nuestro lema — Compromiso, honestidad y eficiencia.</p>
+<section class="gracias">
+        <div class="titulos">
+    <a>¡Gracias por contactarnos!</a>
 </div>
-</section>
+
+
+  <p>Te responderemos lo antes posible</p>
 
 <footer class="footer">
  <p>&copy; 2020 Administración Inmobiliaria Monsar</p>
