--- a/contacto.html
+++ b/contacto.html
@@ -34,16 +34,16 @@
 
 <div class="contactototal">
 <div class="contactocontenido">
-  <form action="mailto:samantha.rdrzc@gmail.com" method="post" enctype="text/plain">
+  <form class="contactform" action="contactform.php" method="post">
     <br>
-    <input type="text" id="fname" name="fname" placeholder="Nombre"><br>
+    <input type="text"  name="name" placeholder="Nombre"><br>
     <br>
-    <input type="text" id="name" name="name" placeholder="Apellido"><br>
+    <input type="text" name="mail" placeholder="Mail"><br>
     <br>
-    <input type="text" id="mail" name="mail" placeholder="Mail"><br>
+    <input type="text" name="subject" placeholder="Asunto"><br>
     <br>
-    <input type="text"id="mensaje" name="comment" size="50" placeholder="Mensaje"><br><br>
-    <input type="submit" value="Enviar">
+    <textarea name="message" placeholder="Mensaje"></textarea>
+    <button type="submit" onclick="location.href('gracias.html');" value="Redirect" name="submit">Enviar</button>
     </form>
   </div>
 
@@ -56,7 +56,7 @@
 
       <p class="subtit">Dirección General</p>
       <p class="link">Samantha Rodríguez</p> <br>
-      <a class="link" href="mailto:srodriguez@monsar.com.mx">srodriguez@monsar.com.mx</a>
+      <a class="link" href="mailto:srodriguez@monsar.com.mx">samanthar@monsar.com.mx</a>
       <br><br>
       <a class="telefono" href="https://wa.me/525588051336" target="_blank" rel="noopener noreferrer">55-8805-1336</a>
 
