--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <section class="img">
-    <img src="assets/matthew-henry-nvFpb_MMRj8-unsplash.jpg" alt=""></a>
+    <img src="assets/imagenfinal.jpg" alt=""></a>
   </section>
 
 <section class="quienes">
