--- a/principios.html
+++ b/principios.html
@@ -29,9 +29,9 @@
 	<p>Presencia en el condominio — Contamos con personal profesional para cada área y trabajamos en equipo dando respuestas oportunas a los requerimientos del Condominio y tomando medidas preventivas para evitar contratiempos.</p>
 
 
-	<p>Transparencia administrativa — Controlamos de manera estricta, y eficiente <br>el área financiera y operativa, con procedimientos oportunos para el correcto funcionamiento.</p>
+	<p>Transparencia administrativa — Controlamos de manera estricta, y eficiente el área financiera y operativa, con procedimientos oportunos para el correcto funcionamiento.</p>
 		
-  <p>Comunicación permanente — Informando periódicamente a los Condóminos <br>de la situación del condominio y su administración.</p>
+  <p>Comunicación permanente — Informando periódicamente a los Condóminos de la situación del condominio y su administración.</p>
   <p>Trabajamos de acuerdo a nuestro lema — Compromiso, honestidad y eficiencia.</p>
 </div>
 </section>
