--- a/servicios.html
+++ b/servicios.html
@@ -105,7 +105,7 @@ Juntas de Comité de Vigilancia
   </summary>
   <p>Informar mensualmente la situación financiera del condominio de manera clara y transparente.</p>
 </details>
-
+</section>
 
 <footer class="footer">
  <p>&copy; 2020 Administración Inmobiliaria Monsar</p>
