--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
   <a>Contáctanos</a>
 </div>
 <div class="parrafoc">
-	<p> Nos encantaría trabajar contigo, llena la forma o mándanos un mail </p> <p> para obtener más detalles y una cotización personalizada.</p>
+	<p> Nos encantaría trabajar contigo, llena la forma o mándanos un mail para obtener más detalles y una cotización personalizada.</p>
 </div>
 </section>
 
