--- a/gracias.html
+++ b/gracias.html
@@ -31,7 +31,7 @@
 
 
   <p>Te responderemos lo antes posible</p>
-
+</section>
 <footer class="footer">
  <p>&copy; 2020 Administración Inmobiliaria Monsar</p>
 </footer>
